--- a/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeNodeView.uss
+++ b/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeNodeView.uss
@@ -19,13 +19,6 @@
     margin-right: 6px;
 }
 
-.node #description {
-    color: rgb(137, 137, 137);
-    font-size: 12px;
-    background-color: rgb(43, 43, 43);
-    padding-left: 20px;
-}
-
 .node.ActionTaskNode #title {
     background-color: rgb(96, 45, 160);
 }
@@ -158,4 +151,44 @@
     visibility: hidden;
     overflow: hidden;
     position: absolute;
+}
+
+#body #header {
+}
+
+#body #header > #icon {
+    display: none;
+    width: auto;
+    height: 100%;
+    margin-left: 0;
+    margin-right: 0;
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-left: 0;
+    padding-right: 0;
+    padding-top: 0;
+    padding-bottom: 0;
+    border-left-width: 0;
+    border-right-width: 0;
+    border-top-width: 0;
+    border-bottom-width: 0;
+    background-image: url('project://database/Packages/com.unity.collab-proxy/Editor/PlasticSCM/Assets/Images/iconplastic.png?fileID=2800000&guid=3042b019b052942a1baf7aa49d7ca6bb&type=3#iconplastic');
+    background-color: rgba(0, 0, 0, 0);
+}
+
+#body #contents .contentLabel {
+    color: rgb(137, 137, 137);
+    font-size: 12px;
+    background-color: rgb(43, 43, 43);
+    padding-left: 20px;
+    min-height: 0;
+    min-width: 0;
+} 
+
+#body #contents #description {
+    display: none;
+}
+
+#body #contents #guid {
+    
 }
