--- a/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeNodeView.uxml
+++ b/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeNodeView.uxml
@@ -8,16 +8,20 @@
                 <ui:ListView class="decoratorList" />
             </ui:VisualElement>
             <ui:VisualElement name="body">
-                <ui:VisualElement name="title">
-                    <ui:Label name="title-label" text="TestNode" class="unity-text-element unity-label" />
-                    <ui:VisualElement name="title-button-container">
-                        <ui:VisualElement name="collapse-button">
-                            <ui:VisualElement name="icon" />
+                <ui:VisualElement name="header">
+                    <ui:Button display-tooltip-when-elided="true" name="icon" />
+                    <ui:VisualElement name="title">
+                        <ui:Label name="title-label" text="TestNode" class="unity-text-element unity-label" />
+                        <ui:VisualElement name="title-button-container">
+                            <ui:VisualElement name="collapse-button">
+                                <ui:VisualElement name="icon" />
+                            </ui:VisualElement>
                         </ui:VisualElement>
                     </ui:VisualElement>
                 </ui:VisualElement>
                 <ui:VisualElement name="contents">
-                    <ui:Label display-tooltip-when-elided="true" name="description" />
+                    <ui:Label display-tooltip-when-elided="true" name="description" class="contentLabel" />
+                    <ui:Label display-tooltip-when-elided="true" name="guid" class="contentLabel" />
                     <ui:VisualElement name="divider" class="horizontal" />
                 </ui:VisualElement>
             </ui:VisualElement>
